bug 500265 - [9] Type is picked from previously compiled module
Change-Id: I579ac26b1a3c13f3f376c043451a216ca3201465